pickup page templates put in place WIP

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -3,7 +3,7 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #9501cb;
+  --ion-color-primary: #357a1c;
   --ion-color-primary-rgb: 149, 1, 203;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
